# ComfyUI-LegionPower

./: .gitignore  CHANGELOG.md  QUICK_REFERENCE.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
examples/: config_with_env_vars.yaml  simple_passthrough.json
runtime/: config.yaml  default_legion_config.yaml
runtime/workflows/: plain_face_restore.json  plain_face_restore_api.json
src/comfyui_legion_power/: __init__.py  legion_config_manager.py
src/comfyui_legion_power/core/: base_serializer.py  legion_datatypes.py  serializer_manager.py
src/comfyui_legion_power/core/serializers/: image_batch_serializer.py  image_serializer.py  primitive_serializer.py
src/comfyui_legion_power/helpers/: api_client.py  file_manager.py  json_patcher.py  process_manager.py  worker_manager.py
src/comfyui_legion_power/nodes/: legion_config.py  legion_exporter.py  legion_importer.py  legion_join.py  legion_join_all.py  legion_master.py  legion_warmup.py
